# voice-linux

./: .gitignore  README.md  README.zh-CN.md  configure.bat  configure.sh  one_click.py  pyproject.toml  requirements-voice-cpu.txt  requirements-voice-gpu.txt  start-abus.py  start-linux.sh  start-voice-simple.py  start-voice.py  start.bat  start.sh  update.bat  update.sh  voice_pro_launcher.py  voice_simple_launcher.py
app/: abus_app_voice.py  abus_asr_parameters.py  abus_asr_whisper.py  abus_asr_whisper_timestamped.py  abus_asr_whisperx.py  abus_demucs.py  abus_download_progress.py  abus_hf_file.py  abus_hf_files-voice.json  abus_nlp_spacy.py  abus_path.py  abus_translate_azure.py  abus_translate_deep.py  abus_tts_azure.py  abus_tts_dots.py  abus_tts_edge.py  abus_tts_f5.py  abus_tts_index.py  abus_tts_kokoro.py  abus_tts_voxcpm.py  abus_voice_celeb.py  gradio_asr.py  gradio_gulliver.py  gradio_translate.py  gradio_tts_dots.py  gradio_tts_f5.py  gradio_tts_index.py  gradio_tts_voxcpm.py  gradio_voice_celeb.py  index_tts_download.py  index_tts_sidecar.py  tab_gulliver.py  tab_subtitle.py  tab_tts_dots.py  tab_tts_f5_single.py  tab_tts_index.py  tab_tts_voxcpm.py  tts_help.py
src/: config.py  ui.py  whisper_compat.py
src/i18n/: i18n.py
