[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-pro"
version = "3.2.0"
description = "Voice-Pro launcher and runtime for Linux NVIDIA via uv"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "azure-ai-translation-text==1.0.0b1",
    "azure-cognitiveservices-speech",
    "browser_cookie3",
    "cached-path==1.8.10",
    "conformer==0.3.2",
    "ctranslate2==4.4.0",
    "deep-translator",
    "demucs==4.0.1",
    "diffusers==0.29.0",
    "edge-tts",
    "einops",
    "evaluate",
    "f5-tts==1.0.8",
    "fastapi-cli==0.0.4",
    "faster-whisper==1.1.0",
    "ffmpeg-python==0.2.0",
    "gdown==5.1.0",
    "gradio==5.14.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "huggingface-hub>=0.34,<1",
    "HyperPyYAML==1.2.2",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "inflect==7.3.1",
    "invisible-watermark",
    "jiwer",
    "json5",
    "kaldialign",
    "kokoro",
    "librosa==0.11.0",
    "lightning==2.2.4",
    "lingua-language-detector",
    "markdown",
    "matplotlib",
    "misaki[en]",
    "misaki[ja]",
    "misaki[zh]",
    "modelscope==1.15.0",
    "more_itertools",
    "ntplib",
    "numpy==2.2.6",
    "onnxruntime-gpu==1.20.1",
    "openai-whisper==20240930",
    "pandas>=2.2,<3",
    "phonemizer",
    "piper_phonemize",
    "py-cpuinfo==9.0.0",
    "pydantic==2.12.5",
    "pydub==0.25.1",
    "pyworld==0.3.4",
    "python-dotenv",
    "python-iso639",
    "pysubs2",
    "pyyaml",
    "rich",
    "scipy",
    "setuptools<81",
    "soundcard",
    "soundfile==0.13.1",
    "spacy[cuda12x]==3.8.8",
    "structlog",
    "tensorboard==2.14.0",
    "dots-tts",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tqdm",
    "Unidecode",
    "websocket-client",
    "websockets",
    "wget",
    "WeTextProcessing==1.0.3",
    "whisper-timestamped==1.15.8",
    "whisperx==3.3.1",
    "transformers==4.57.4",
    "yt-dlp==2025.11.12",
]

[project.scripts]
voice-pro = "voice_pro_launcher:main"

[dependency-groups]
dev = [
    "ruff",
]

[tool.setuptools]
py-modules = ["voice_pro_launcher"]

[tool.setuptools.packages.find]
include = ["app*", "cosyvoice*", "src*"]

[tool.uv]
package = true
override-dependencies = [
    "numpy==2.2.6",
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
dots-tts = { git = "https://github.com/rednote-hilab/dots.tts.git" }

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
